--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -155,6 +155,7 @@ div.content_projetos .projeto {
 	box-shadow: 2px 2px 5px 1px black;
 	color: white;
 	padding-bottom: 0;
+	cursor: pointer;
 }
 .projeto h2 {
 	color: white;
