--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,10 @@ body {
 	margin: 0;
 	padding: 0;
 }
+body.dark {	
+	background-color: #121312;
+	color: white
+}
 .container{
 	max-width: 1024px;
 	display: flex; 
